
* A number of problems related to unicode/byte string conversion of
  filenames and error messages were fixed.

* Building on MacOS-X now passes the "flat_namespace" option to the C
  compiler, which reportedly prevents build quirks and crashes on this
  platform.

* Windows build was broken.

* Rare crash when serialising to a file object with certain encodings.

Other changes
-------------

* Up to several times faster attribute access (i.e. tree traversal) in
  lxml.objectify.


2.0.6 (2008-05-31)
==================

Features added
--------------

Bugs fixed
----------

* Incorrect evaluation of ``el.find("tag[child]")``.

* Windows build was broken.

* Moving a subtree from a document created in one thread into a
  document of another thread could crash when the rest of the source
  document is deleted while the subtree is still in use.

* Rare crash when serialising to a file object with certain encodings.

Other changes
-------------

* lxml should now build without problems on MacOS-X.


2.1beta2 (2008-05-02)
=====================

Features added
--------------

* All parse functions in lxml.html take a ``parser`` keyword argument.

* lxml.html has a new parser class ``XHTMLParser`` and a module
  attribute ``xhtml_parser`` that provide XML parsers that are
  pre-configured for the lxml.html package.

Bugs fixed
----------

* Moving a subtree from a document created in one thread into a
  document of another thread could crash when the rest of the source
  document is deleted while the subtree is still in use.

* Passing an nsmap when creating an Element will no longer strip
  redundantly defined namespace URIs.  This prevented the definition
  of more than one prefix for a namespace on the same Element.

Other changes
-------------

* If the default namespace is redundantly defined with a prefix on the
  same Element, the prefix will now be preferred for subelements and
  attributes.  This allows users to work around a problem in libxml2