@@ -723,7 +723,7 @@ class ETreeOnlyTestCase(HelperTestCase):
         Entity = self.etree.Entity
         self.assertRaises(ValueError, Entity, 'a b c')
         self.assertRaises(ValueError, Entity, 'a,b')
-        self.assertRaises(AssertionError, Entity, 'a\0b')
+        self.assertRaises(ValueError, Entity, 'a\0b')
         self.assertRaises(ValueError, Entity, '#abc')
         self.assertRaises(ValueError, Entity, '#xxyz')
 
@@ -1999,53 +1999,53 @@ class ETreeOnlyTestCase(HelperTestCase):
         Element = self.etree.Element
 
         a = Element('a')
-        self.assertRaises(AssertionError, setattr, a, "text", 'ha\0ho')
-        self.assertRaises(AssertionError, setattr, a, "tail", 'ha\0ho')
+        self.assertRaises(ValueError, setattr, a, "text", 'ha\0ho')
+        self.assertRaises(ValueError, setattr, a, "tail", 'ha\0ho')
 
-        self.assertRaises(AssertionError, Element, 'ha\0ho')
+        self.assertRaises(ValueError, Element, 'ha\0ho')
 
     def test_unicode_byte_zero(self):
         Element = self.etree.Element
 
         a = Element('a')
-        self.assertRaises(AssertionError, setattr, a, "text",
+        self.assertRaises(ValueError, setattr, a, "text",
                           _str('ha\0ho'))
-        self.assertRaises(AssertionError, setattr, a, "tail",
+        self.assertRaises(ValueError, setattr, a, "tail",
                           _str('ha\0ho'))
 
-        self.assertRaises(AssertionError, Element,
+        self.assertRaises(ValueError, Element,
                           _str('ha\0ho'))
 
     def test_byte_invalid(self):
         Element = self.etree.Element
 
         a = Element('a')
-        self.assertRaises(AssertionError, setattr, a, "text", 'ha\x07ho')
-        self.assertRaises(AssertionError, setattr, a, "text", 'ha\x02ho')
+        self.assertRaises(ValueError, setattr, a, "text", 'ha\x07ho')
+        self.assertRaises(ValueError, setattr, a, "text", 'ha\x02ho')
 
-        self.assertRaises(AssertionError, setattr, a, "tail", 'ha\x07ho')
-        self.assertRaises(AssertionError, setattr, a, "tail", 'ha\x02ho')
+        self.assertRaises(ValueError, setattr, a, "tail", 'ha\x07ho')
+        self.assertRaises(ValueError, setattr, a, "tail", 'ha\x02ho')
 
-        self.assertRaises(AssertionError, Element, 'ha\x07ho')
-        self.assertRaises(AssertionError, Element, 'ha\x02ho')
+        self.assertRaises(ValueError, Element, 'ha\x07ho')
+        self.assertRaises(ValueError, Element, 'ha\x02ho')
 
     def test_unicode_byte_invalid(self):
         Element = self.etree.Element
 
         a = Element('a')
-        self.assertRaises(AssertionError, setattr, a, "text",
+        self.assertRaises(ValueError, setattr, a, "text",
                           _str('ha\x07ho'))
-        self.assertRaises(AssertionError, setattr, a, "text",
+        self.assertRaises(ValueError, setattr, a, "text",
                           _str('ha\x02ho'))
 
-        self.assertRaises(AssertionError, setattr, a, "tail",
+        self.assertRaises(ValueError, setattr, a, "tail",
                           _str('ha\x07ho'))
-        self.assertRaises(AssertionError, setattr, a, "tail",
+        self.assertRaises(ValueError, setattr, a, "tail",
                           _str('ha\x02ho'))
 
-        self.assertRaises(AssertionError, Element,
+        self.assertRaises(ValueError, Element,
                           _str('ha\x07ho'))
-        self.assertRaises(AssertionError, Element,
+        self.assertRaises(ValueError, Element,
                           _str('ha\x02ho'))
 
     def test_encoding_tostring_utf16(self):
